--- a/movieapp/package.json
+++ b/movieapp/package.json
@@ -1,4 +1,6 @@
 {
+  "dependencies": {
+    "react-star-rating-component": "^1.4.1"}
   "name": "movieapp",
   "version": "0.1.0",
   "private": true,
